2009-09-18 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.cpp: Layout improved, using more QDockWidgets
	* arpwidget.cpp: QGridLayout used where appropriate
	
2009-09-18 Frank Kober <goemusic@yahoo.fr>
	* arpwidget.cpp, midiarp.cpp: don't pass arpScreen to midiarp, 
	maximum height of arpScreen increased, groove values passed
	to arpscreen (not handled yet), queueTempo awareness added
	to midiarp for atk/rel display in seconds
	* arpscreen.cpp: math header removed, replace rectangles by lines to
	optimize, only one call to height() and width()
	* seqdriver.cpp: ALSA error number included in message, dependency 
	on C headers removed, midiarp gets queueTempo on every loop
	* mainwindow.cpp: PACKAGE replaced by APP_NAME on all occurences 
	
2009-09-17 Frank Kober <goemusic@yahoo.fr>
	* main.cpp: fixed start options, --help message extended, dependency
	on stdio.h removed
	
2009-09-16 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.*, main.*: load filename without -f option, store About
	message in const char, AboutQt added, renamed load(QString) to
	fileOpen(QString), display filename in window title
	* configure.ac: APP_NAME added
	
2009-09-15 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.*, passwidget.*: moved midi clock toggler into main
	toolbar, disable arp menu functions and file load when midi clock
	enabled
	* midiclock.xpm: icon added
	
2009-09-14 Frank Kober <goemusic@yahoo.fr>
	* midiarp.cpp: removeNote(*ev..) removes only one of potentially
	multiple occurences of notes at a time, note buffer cleared on queue 
	stop (both changes from original behaviour), rework note buffer to 
	correctly account for double strokes/releases also when received
	at same time (sequencers!), remove released vel=0 notes earlier to
	avoid temporary silences
	* mainwindow.cpp, arpwidget.cpp: envelope params added to disk-saved 
	items
	* mainwindow.cpp: unnecessary newTempo signal removed
	* arpwidget.cpp: display attack/release in seconds (not yet real)
